--- a/package.json
+++ b/package.json
@@ -75,8 +75,10 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "@blueprintjs/core": "^1.4.0",
     "axios": "^0.15.2",
     "react": "^15.4.1",
+    "react-addons-css-transition-group": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-helmet": "^3.2.1",
     "react-redux": "^5.0.1",
